# ffmpeg-streaming

./: CMakeLists.txt  main.cpp
